Working on ie9 fix

--- a/ie.css
+++ b/ie.css
@@ -1,3 +1,3 @@
 #bgvid {
-	visibility: hidden;
+	visibility: hidden !important;
 }
